--- a/templates/news.html
+++ b/templates/news.html
@@ -5,7 +5,7 @@
 	<h1>{{ news.news_title }}</h1>
 	<p class="date">{{news.date_published}}</p>
 	<img src="{{ news.primary_img_path|replace('_small', '_medium') }}" alt="">
-	<div class="content">{{ news.news_content|safe }}</div>
+	<div class="content">{{ news.news_content|safe|replace('dailypakistan.com.pk', 'm2.dailypakistan.com.pk') }}</div>
 </div>
 
 <h1>{{status}}</h1>
