--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,11 @@
 	{% block content %}
 	<div class="container">
 	{% for news in news %}
-		<p class="category {{category}}">{{ news.category_name }}</p>
-		<img src="{{ news.primary_img_path }}" alt="">
+		<p class="category {{news.category_name|replace(' ','_')}}">{{ news.category_name }}</p>
+		<p class="date">{{news.date_published}}</p>
+		<img class="thumb" src="{{ news.primary_img_path }}" alt="">
 		<h1><a href="/c/d/{{news.news_id}}">{{ news.news_title }}</a></h1>
-		<p class="date">{{news.date_published}}</p><HR><BR>
+		<HR><BR>
 	{% endfor %}
 	</div>
 {% endblock %}
