--- a/templates/news.html
+++ b/templates/news.html
@@ -4,7 +4,7 @@
 	<p class="category {{category}}">{{ news.category_name }}</p>
 	<h1>{{ news.news_title }}</h1>
 	<p class="date">{{news.date_published}}</p>
-	<img src="{{ news.primary_img_path|replace('_small', '_medium') }}" alt="">
+	<div class="img-container"><img src="{{ news.primary_img_path|replace('_small', '_medium') }}" alt=""></div>
 	<div class="content">{{ news.news_content|safe|replace('dailypakistan.com.pk', 'm2.dailypakistan.com.pk') }}</div>
 </div>
 
