--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 		<p class="category {{news.category_name|replace(' ','_')}}">{{ news.category_name }}</p>
 		<p class="date">{{news.date_published}}</p>
 		<img class="thumb" src="{{ news.primary_img_path }}" alt="">
-		<h1><a href="/c/d/{{news.news_id}}">{{ news.news_title }}</a></h1>
+		<h1 class="headline"><a href="/c/d/{{news.news_id}}">{{ news.news_title }}</a></h1>
 		<HR><BR>
 	{% endfor %}
 	</div>
