--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,8 +16,9 @@
 			<img class="clearfix" src="{{ url_for('static', filename='images/daily-pakistan-logo.png') }}" alt="Home">
 			<ul class="menu">
 				<li><a href="/categories">Categories</a></li>
-				<li><a class="home" href="/">Home</a></li>&nbsp;
+				<li><a class="home" href="/">Home</a></li>
 			</ul>
+			&nbsp;
 		</div>
 		{% block content %}{% endblock %}
 	</body>
