--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,9 +72,9 @@ h1 {
 }
 .menu li a {
 	background-color: #3BEA86;
-	border-bottom:3px solid #222;
-	width: 99%;
-	padding: 1.5em;
+	border-bottom: 3px solid #222;
+	width: 100%;
+	padding: 1.5em 0px;
 	display: inline-block;
 }
 .menu li a:hover {
