--- a/templates/news.html
+++ b/templates/news.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container">
-	<p class="category {{category}}">{{ news.category_name }}</p>
+	<p class="category {{news.category_name|replace(' ','_')}}">{{ news.category_name }}</p>
 	<h1>{{ news.news_title }}</h1>
 	<p class="date">{{news.date_published}}</p>
 	<div class="img-container"><img src="{{ news.primary_img_path|replace('_small', '_medium') }}" alt=""></div>
