--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<div class="menu-container">
-			<img class="clearfix" src="{{ url_for('static', filename='images/daily-pakistan-logo.png') }}" alt="Home">
+			<img class="clearfix" src="{{ url_for('static', filename='images/logo-05.png') }}" alt="Home">
 			<ul class="menu">
 				<li><a href="/categories">Categories</a></li>
 				<li><a class="home" href="/">Home</a></li>
