--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,7 +53,7 @@ h1 {
 	line-height: 300%;
 }
 .menu-container {
-	background: #016F3A;
+	background: #fff;
 	text-align: center;
 	padding:20px;
 	padding-bottom: 5px;
