--- a/static/css/style.css
+++ b/static/css/style.css
@@ -155,6 +155,14 @@ h1 {
 	color: blue!important;
 }
 
+footer {
+	text-align: center;
+	padding:30px;
+}
+footer p {
+	width:50%;
+}
+
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px) {
 
