--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,5 +21,9 @@
 			&nbsp;
 		</div>
 		{% block content %}{% endblock %}
+		<footer>
+			<img width="100px" src="{{ url_for('static', filename='images/daily-pakistan-logo.png') }}">
+			<p>In Partnership with Daily Pakistan</p>
+		</footer>
 	</body>
 </html>
