--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,7 @@
 		<div class="menu-container">
 			<img class="clearfix" src="{{ url_for('static', filename='images/logo-05.png') }}" alt="Home">
 			<ul class="menu">
-				<li><a href="/categories">کیٹگریز</a></li>
+				<li><a href="/categories">موضوعات</a></li>
 				<li><a class="home" href="/">تازہ ترین</a></li>
 			</ul>
 			&nbsp;
