--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 		<h1 class="headline"><a href="/c/d/{{news.news_id}}">{{ news.news_title }}</a></h1>
 		<p class="date">{{news.date_published}}</p>
 		<img class="thumb" src="{{ news.primary_img_path }}" alt="">
-		<br><hr><br>
+		<br>&nbsp;<hr><br>
 	{% endfor %}
 	</div>
 {% endblock %}
