--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 		<p class="category {{news.category_name|replace(' ','_')}}">{{ news.category_name }}</p>
 		<h1 class="headline"><a href="/c/d/{{news.news_id}}">{{ news.news_title }}</a></h1>
 		<p class="date">{{news.date_published}}</p>
-		<img class="thumb" src="{{ news.primary_img_path }}" alt="">
+		<a href="/c/d/{{news.news_id}}"><img class="thumb" src="{{ news.primary_img_path }}" alt=""></a>
 		<br>&nbsp;<hr><br>
 	{% endfor %}
 	</div>
