--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Daily Pakistan Mobile</title>
+		<title>Telenor News</title>
 
 		<link rel="shortcut icon" type="image/png" href="{{ url_for('static', filename='images/favicon.png') }}"/>
 		<link href="{{ url_for('static', filename='css/reset.css') }}" rel="stylesheet">
