--- a/static/css/style.css
+++ b/static/css/style.css
@@ -204,7 +204,7 @@ footer img {
 	}
 	.content {
 		font-size:200%;
-		line-height: 2em;
+		line-height: 20px!important;
 	}
 	h1 {
 		font-size: 300%;
