--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,6 +52,14 @@ h1 {
 	margin-top:2em;
 	line-height: 300%;
 }
+.content a {
+  margin: 0em 0.4em;
+  background: #A9CDEC;
+  color: #474141;
+  padding: 0.5em;
+  font-size: 80%;
+  border-radius: 4px;
+}
 .menu-container {
 	background: #fff;
 	text-align: center;
