--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,12 +53,12 @@ h1 {
 	line-height: 300%;
 }
 .content a {
-  margin: 0em 0.4em;
-  background: #A9CDEC;
-  color: #474141;
-  padding: 0.5em;
-  font-size: 80%;
-  border-radius: 4px;
+	margin: 0em 0.4em;
+	background: #E4E4E4;
+	color: #2E51AE;
+	padding: 0.5em;
+	font-size: 80%;
+	border-radius: 4px;
 }
 .menu-container {
 	background: #fff;
