--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,12 +53,13 @@ h1 {
 	line-height: 300%;
 }
 .content a {
-	margin: 0em 0.4em;
-	background: #E4E4E4;
+	/* margin: 0em 0.4em; */
+	background: #EDEDED;
 	color: #2E51AE;
-	padding: 0.5em;
+	padding: 0em 0.9em;
 	font-size: 80%;
-	border-radius: 4px;
+	border-radius: 2px;
+	display: block;
 }
 .menu-container {
 	background: #fff;
