--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,7 +42,7 @@ h1 {
 .container {
 	width:90%;
 	margin:0px auto;
-	margin-top:40px;
+	margin-top:4em;
 }
 .img-container {
 	width:100%;
@@ -62,10 +62,10 @@ h1 {
 	display: block;
 }
 .menu-container {
-	background: #fff;
+	background: #FFF;
 	text-align: center;
-	padding:20px;
-	padding-bottom: 5px;
+	padding: 3em;
+	padding-bottom: 1em;
 }
 .menu-container img {
 	margin-bottom:20px;
@@ -193,7 +193,11 @@ footer img {
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px) {
-
+	.container {
+		width: 70%;
+		margin: 0px 5em;
+		margin-top: 3em;
+	}
 }
 
 /* Small Devices, Tablets */
