--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,6 +61,10 @@ h1 {
 	border-radius: 2px;
 	display: block;
 }
+article.story {
+  padding: 1.2em 0em 2.4em 0em;
+  border-bottom: 1px dotted #BEBEBE;
+}
 .menu-container {
 	background: #FFF;
 	text-align: center;
