--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 		<h1 class="headline"><a href="/c/d/{{news.news_id}}">{{ news.news_title }}</a></h1>
 		<p class="date">{{news.date_published}}</p>
 		<a href="/c/d/{{news.news_id}}"><img class="thumb" src="{{ news.primary_img_path|replace('dailypakistan.com.pk', 'telenornews.pk') }}" alt=""></a>
-	</article><hr>
+	</article>
 	{% endfor %}
 	</div>
 {% endblock %}
