--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,7 +22,7 @@
 		</div>
 		{% block content %}{% endblock %}
 		<footer>
-			<img width="100" src="{{ url_for('static', filename='images/daily-pakistan-logo.png') }}">
+			<img alt="Daily Pakistan Logo" width="100" src="{{ url_for('static', filename='images/daily-pakistan-logo.png') }}">
 			<p>In Partnership with Daily Pakistan</p>
 		</footer>
 	</body>
