--- a/templates/news.html
+++ b/templates/news.html
@@ -13,4 +13,5 @@
 	<div class="content">{{ news.news_content|safe|replace('dailypakistan.com.pk', 'telenornews.pk') }}</div>
 	<span class="dot {{status}}">&#9679;</span>
 </div>
+<{{ titl }}>
 {% endblock %}
