--- a/templates/news.html
+++ b/templates/news.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-		<title>{{ pt }}</title>
+		<title>{{ news.news_title }} - Telenor News</title>
 {% endblock %}
 
 {% block content %}
