--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,8 +22,8 @@
 		</div>
 		{% block content %}{% endblock %}
 		<footer>
-			<img alt="Daily Pakistan Logo" width="100" src="{{ url_for('static', filename='images/daily-pakistan-logo.png') }}">
-			<p>In Partnership with Daily Pakistan</p>
+			<a href="http://dailypakistan.com.pk"><img alt="Daily Pakistan Logo" width="100" src="{{ url_for('static', filename='images/daily-pakistan-logo.png') }}"></a>
+			<a href="http://dailypakistan.com.pk"><p>In Partnership with Daily Pakistan</p></a>
 		</footer>
 	</body>
 </html>
