--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,7 @@
 		{% block content %}{% endblock %}
 		<footer>
 			<a href="http://dailypakistan.com.pk"><img alt="Daily Pakistan Logo" width="100" src="{{ url_for('static', filename='images/daily-pakistan-logo.png') }}"></a>
-			<a href="http://dailypakistan.com.pk"><p>In Partnership with Daily Pakistan</p></a>
+			<a style="color:white;" href="http://dailypakistan.com.pk"><p>In Partnership with Daily Pakistan</p></a>
 		</footer>
 	</body>
 </html>
